// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea Textarea baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner"
      name="description"
      placeholder="请输入描述文案"
      unselectable="off"
    />
  </div>
   
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner"
      name="description"
      placeholder="请输入文案，高度可自适应；autosize=true"
      unselectable="off"
    />
  </div>
   
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner t-resize-none"
      name="description"
      placeholder="请输入文案，高度可自适应，最小3行，最大5行；autosize={minRows: 3, maxRows: 5}"
      unselectable="off"
    />
  </div>
</div>
`;

exports[`Textarea Textarea eventsVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner"
      placeholder="请输入"
      unselectable="off"
    />
  </div>
</div>
`;

exports[`Textarea Textarea maxlengthVue demo works fine 1`] = `
<div>
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner"
      maxlength="20"
      placeholder="请输入描述文案，文本长度最多20，maxlength=20"
      unselectable="off"
    />
    <span
      class="t-textarea__limit"
    >
      0/20
    </span>
  </div>
   
  <br />
   
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner"
      placeholder="请输入描述文案，最多20字符（一个汉字占两个字符长度），maxcharacter=20"
      unselectable="off"
    />
    <span
      class="t-textarea__limit"
    >
      0/20
    </span>
  </div>
</div>
`;

exports[`Textarea Textarea typeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="t-textarea t-is-disabled"
  >
    <textarea
      class="t-textarea__inner t-is-disabled"
      disabled="disabled"
      unselectable="off"
    />
  </div>
   
  <div
    class="t-textarea t-is-readonly"
  >
    <textarea
      class="t-textarea__inner"
      readonly="readonly"
      unselectable="on"
    />
  </div>
   
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner"
      unselectable="off"
    />
    <div
      class="t-textarea__tips t-textarea__tips--normal"
    >
      这是普通文本提示
    </div>
  </div>
   
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner t-is-success"
      unselectable="off"
    />
    <div
      class="t-textarea__tips t-textarea__tips--success"
    >
      校验通过文本提示
    </div>
  </div>
   
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner t-is-warning"
      unselectable="off"
    />
    <div
      class="t-textarea__tips t-textarea__tips--warning"
    >
      校验不通过文本提示
    </div>
  </div>
   
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner t-is-error"
      unselectable="off"
    />
    <div
      class="t-textarea__tips t-textarea__tips--error"
    >
      校验存在严重问题文本提示
    </div>
  </div>
</div>
`;
